most of the API endpoints for the applicant dashboard and its related features are completed and tested, including:
- fetching and displaying the applicant's full profile details

- submitting and updating the entire multi-section profile form

- uploading a resume file

- viewing available tasks and applying for them

- viewing a list of all personal task applications and their statuses

- withdrawing a task application

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ taskpay-frontend/build/
 # Backend specific build/dist folders (if applicable)
 backend/dist/
 backend/build/
+
+# Uploaded files
+/taskpay-backend/uploads/
